# natural-gas-density-prediction-MLP

./: .$MLP Architecture.drawio.bkp  .gitignore  MLP Architecture.drawio  Simualtion Peng-Robinson.dwxmz  Simualtion Peng-Robinson_backup.dwxmz  pyproject.toml  readme.md
dataset/: Natural gas density data.xlsx  Natural gas density data_1_dwsim.xlsx  ng_density_all.csv
notebooks/: Convert Data DWSIM.ipynb  Data Preparation and EDA.ipynb  Training.ipynb
pickles/: X_test.pkl  X_train.pkl  X_valid.pkl  feature_stats.pkl  model_linreg.pkl  model_mlp.pkl  test_loader.pkl  train_loader.pkl  valid_loader.pkl  y_test.pkl  y_train.pkl  y_valid.pkl
src/: 1a_data_prep.py  2_data_preprocessing.py  3a_training_base_model.py  3b_training_MLP.py  4_hyperparameter_tuning.py  streamlit_predict_density.py
