[tool.poetry]
name = "mlp prediction of natural gas density"
version = "0.1.0"
description = ""
authors = ["haranobuhardo <haranobuhardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
autopep8 = "^2.0.4"
torch = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
